--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 remote_theme: pages-themes/minimal@v0.2.0
 title: Ilia Klishin
-logo:
-description: Java Backend Developer with more than 2 years of production experience.
-
-### My toolbox
-  *   Java 8/11/17
-  *   Frameworks: Spring Framework (incl. Spring MVC, Spring Security and Spring Data), Spring Boot, Hibernate
-  *   BPM: Camunda, Camunda Cockpit, Camunda Modeler
-  *   Messaging: Apache Kafka, RabbitMQ
-  *   Testing frameworks: JUnit, AssertJ, Mockito, Rest Assured, Testcontainers
-  *   Build tools: Maven, Gradle
-  *   Databases: PostgreSQL, MongoDB
-  *   CI/CD: Gerrit, Gitlab, Bitbucket, Jenkins
-  *   Virtualization & orchestration: Docker, Kubernetes, OpenShift, Rancher
+description:
+  -   Java Backend Developer with more than 2 years of production experience.
+  -   Java 8/11/17
+  -   Frameworks: Spring Framework (incl. Spring MVC, Spring Security and Spring Data), Spring Boot, Hibernate
+  -   BPM: Camunda, Camunda Cockpit, Camunda Modeler
+  -   Messaging: Apache Kafka, RabbitMQ
+  -   Testing frameworks: JUnit, AssertJ, Mockito, Rest Assured, Testcontainers
+  -   Build tools: Maven, Gradle
+  -   Databases: PostgreSQL, MongoDB
+  -   CI/CD: Gerrit, Gitlab, Bitbucket, Jenkins
+  -   Virtualization & orchestration: Docker, Kubernetes, OpenShift, Rancher
