--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/minimal@v0.2.0
 title: Ilia Klishin
-description: Java Backend Developer with more than 2 years of production experience
+description: Java Backend Developer with 3+ years of production experience
